Role restrictions. Naming changes.